Fix appearance of floor plan and map buttons on mobile

--- a/public/carousel-style.css
+++ b/public/carousel-style.css
@@ -435,32 +435,30 @@
   .carousel-thumb-container {
     text-align: center;
     display: inline-block;
+    width: 100%;
   }
 
   .button-container {
     width: 100%;
     position: relative;
-    padding: 10px;
+    padding: 10px 0;
   }
 
   .floor-plan-button {
-    width: 40%;
+    width: 45%;
     height: 90px;
-    margin: 10px;
+    margin: 7px;
     background: url(/assets/images/floorplan-button-background.jpg);
   }
 
   .button-text {
     padding: 34px 16px 10px 34px;
-    background-position: 122px 37px;
-    width: 100%;
-    height: 100%;
   }
 
   .map-button {
-    width: 40%;
+    width: 45%;
     height: 90px;
-    margin: 10px;
+    margin: 7px;
   }
 
   .map-button img {
